src/objects/Fingerprint_Results__c.object
<CustomObject>
    <fields>
        <fullName>AMR__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AMR</label>
        <referenceTo>Request__c</referenceTo>
        <relationshipLabel>Fingerprinting/Background  Results</relationshipLabel>
        <relationshipName>Fingerprinting_Background_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Agency__c</fullName>
        <label>Agency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>WSP</fullName>
                </value>
                <value>
                    <fullName>FBI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Applicant_Licensee_Name__c</fullName>
        <formula>HYPERLINK(&apos;https://wadolbuspro--dev.lightning.force.com/lightning/r/Contact/&apos;&amp; AMR__r.Contact__r.Id &amp;&apos;/view&apos;, AMR__r.Applicant_Full_name__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Applicant/Licensee Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Fingerprinting/Background  Results</relationshipLabel>
        <relationshipName>Fingerprinting_Background_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
	<fullName>Fingerprint_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Fingerprint Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
	<fields>
        <fullName>Fingerprint_Reject_Reason__c</fullName>
        <description>Fingerprint Reject Reason</description>
        <label>Fingerprint Reject Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Smudged or Smeared Fingerprint</fullName>
                </value>
                <value>
                    <fullName>Image Too Light</fullName>
                </value>
                <value>
                    <fullName>Image Too Dark</fullName>
                </value>
                <value>
                    <fullName>Insufficient Pattern</fullName>
                </value>
                <value>
                    <fullName>Sequence Error</fullName>
                </value>
                <value>
                    <fullName>Fingerprint Missing</fullName>
                </value>
                <value>
                    <fullName>Corresponding Plain or Slap Fingerprint</fullName>
                </value>
                <value>
                    <fullName>Unable to Determine Sequence</fullName>
                </value>
                <value>
                    <fullName>Fingerprint Not Black</fullName>
                </value>
                <value>
                    <fullName>Not Rolled in Center</fullName>
                </value>
                <value>
                    <fullName>Overlapping Fingerprints</fullName>
                </value>
                <value>
                    <fullName>Fingerprints Obscured</fullName>
                </value>
                <value>
                    <fullName>Electronic Distorted or Shadowed</fullName>
                </value>
                <value>
                    <fullName>Lotion/Retabs</fullName>
                </value>
                <value>
                    <fullName>Quality Characteristic too Low</fullName>
                </value>
                <value>
                    <fullName>Blank Fill in Written Response</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
	<fields>
        <fullName>License__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>License</label>
        <referenceTo>MUSW__License2__c</referenceTo>
        <relationshipLabel>Fingerprinting/Background  Results</relationshipLabel>
        <relationshipName>Fingerprinting_Background_Results</relationshipName>
        <type>Lookup</type>
    </fields>
	<fields>
        <fullName>WASIC_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>WASIC Date</label>
        <type>Date</type>
    </fields>
	<fields>
        <fullName>License_ID__c</fullName>
        <description>Foreign Key for Data Migration of Legacy Data</description>
        <encryptionScheme>None</encryptionScheme>
        <label>License ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>Status_Date__c</fullName>
        <description>Fingerprint Status Date</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Status Date</label>
        <type>Date</type>
    </fields>
	<fields>
        <fullName>Release__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Release</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Fingerprint Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Cleared</fullName>
                </value>
                <value>
                    <fullName>Background Hit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
	<fields>
        <fullName>Account_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Contact</label>
        <referenceTo>MUSW__Account_Contact__c</referenceTo>
        <relationshipLabel>Fingerprinting/Background  Results</relationshipLabel>
        <relationshipName>Fingerprinting_Background_Results</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Fingerprinting/Background Results</label>
    <nameField>
        <displayFormat>FR - {00000}</displayFormat>
        <label>Fingerprint Results Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fingerprinting/Background  Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>